# tg-mod-bot

./: README.md  pyproject.toml
mod_bot/: __main__.py
